# autosleep

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
base/: autosleep.conf  autosleep.service
base/checks/: tmux-sessions.sh  vs-server.sh
src/: daemon.rs  main.rs  setup.rs
src/checks/: command.rs  mod.rs  parser.rs  users.rs
