[package]
name = "autosleep"
version = "0.1.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
configparser = "3.0.2"
flexi_logger = "0.25.4"
lazy_static = "1.4.0"
log = "0.4.17"
regex = "1.8.1"
systemd-journal-logger = "1.0.0"
tokio = { version = "1.28.1", features = ["full"] }
